--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
  - title: "Kernel 4.16 Code"
    url: /code4.16/startkernel/
  - title: "Posts"
-   url: /posts/
+   url: /year-archive/
  - title: "Category"
    url: /categories/
  - title: "Tag"
